backend/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumos-lab-backend
  namespace: lumos-lab-dev
  labels:
    app: lumos-lab-backend
spec:
  selector:
    app: lumos-lab-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 9090
      targetPort: grpc
  type: ClusterIP
